--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="selector">@android:color/white</color>
+    <color name="colorTabIndicator">#ffffff</color>
+    <color name="colorBackground">#98c77b</color>
 </resources>
