--- a/app/src/main/res/layout/activity_benchmark.xml
+++ b/app/src/main/res/layout/activity_benchmark.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".BenchmarkActivity">
 
     <include
         android:id="@+id/tool_bar"
@@ -25,6 +25,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="2dp"
-        android:background="@color/colorBackground"/>
+        android:background="@color/colorPrimaryDark"/>
 
 </LinearLayout>
