--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#98c77b</color>
-    <color name="colorPrimaryDark">#70945a</color>
+    <color name="colorPrimary">#FFC107</color>
+    <color name="colorPrimaryDark">#FFC107</color>
     <color name="colorAccent">#40a9ff</color>
     <color name="colorTitle">@android:color/white</color>
     <color name="selector">@android:color/white</color>
     <color name="colorTabIndicator">#ffffff</color>
-    <color name="colorBackground">#7c98c77b</color>
+    <color name="colorBackground">#ffffff</color>
     <color name="colorTabControl">#98c77b</color>
 </resources>
