--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,17 +6,18 @@
     android:paddingRight="0dp"
     android:paddingTop="0dp"
     android:paddingBottom="0dp"
-    android:background="#FFC107"
+    android:background="#FFEB3B"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main" tools:context=".MainActivity"
-    android:minWidth="1000dp">
+    android:minWidth="1000dp"
+    android:id="@+id/layout_parent">
 
     <ImageView
         android:id="@+id/avatar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:contentDescription=""
-        android:src="@drawable/panda_01_crying"
+        android:src="@drawable/sunflowers_state2"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
@@ -24,13 +25,15 @@
         android:layout_marginTop="0dp"
         android:layout_marginRight="0dp"
         android:layout_marginBottom="0dp"
-        android:scaleType="fitCenter"
+        android:scaleType="centerCrop"
         android:adjustViewBounds="true"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
         android:paddingRight="0dp"
         android:paddingBottom="0dp"
-        android:layout_alignEnd="@+id/linearLayout" />
+        android:layout_alignEnd="@+id/linearLayout"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentEnd="false" />
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
@@ -45,7 +48,7 @@
             android:id="@+id/title0"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TaoTao"
+            android:text="Fiore"
             android:gravity="center"
             android:textSize="44sp"/>
 
