--- a/app/src/main/res/layout/activity_advice.xml
+++ b/app/src/main/res/layout/activity_advice.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="be.mhealth.quantifiedhealth.AdviceActivity2">
+    tools:context=".AdviceActivity">
 
     <LinearLayout
         android:orientation="vertical"
