--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <resources>
-    <color name="colorPrimary">#98c77b</color>
-    <color name="colorPrimaryDark">#70945a</color>
+    <color name="colorPrimary">#FFEB3B</color>
+    <color name="colorPrimaryDark">#FFEB3B</color>
     <color name="colorAccent">#40a9ff</color>
     <color name="colorTitle">@android:color/white</color>
     <color name="colorText">@android:color/black</color>
     <color name="selector">@android:color/white</color>
     <color name="colorTabIndicator">#ffffff</color>
-    <color name="colorBackground">#7c98c77b</color>
+    <color name="colorBackground">#ffffff</color>
     <color name="colorTabControl">#98c77b</color>
 </resources>
