--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
@@ -9,19 +8,19 @@
     android:paddingBottom="0dp"
     android:background="#FFEB3B"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_advice" tools:context=".AdviceActivity"
+    tools:showIn="@layout/activity_diary" tools:context=".DiaryActivity"
     android:minWidth="1000dp">
 
-<ImageView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:contentDescription=""
-    android:src="@drawable/bg_content_advice_smaller_img"
-    android:layout_marginLeft="0dp"
-    android:layout_marginTop="0dp"
-    android:layout_marginRight="0dp"
-    android:layout_marginBottom="0dp"
-    android:scaleType="centerCrop"
-    android:adjustViewBounds="true"/>
-
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:contentDescription=""
+        android:src="@drawable/bg_content_advice_smaller_img"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="0dp"
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"/>
 </RelativeLayout>
+
