--- a/app/src/main/res/layout/activity_advice.xml
+++ b/app/src/main/res/layout/activity_advice.xml
@@ -7,10 +7,9 @@
     android:paddingRight="0dp"
     android:paddingTop="0dp"
     android:paddingBottom="0dp"
-    android:background="#FFEB3B"
+    android:background="#FFFFFF"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_advice" tools:context=".AdviceActivity"
-    android:minWidth="1000dp">
+    tools:showIn="@layout/activity_advice" tools:context=".AdviceActivity">
 
 <ImageView
     android:layout_width="match_parent"
@@ -21,7 +20,6 @@
     android:layout_marginTop="0dp"
     android:layout_marginRight="0dp"
     android:layout_marginBottom="0dp"
-    android:scaleType="centerCrop"
     android:adjustViewBounds="true"/>
 
 </RelativeLayout>
