--- a/app/src/main/res/layout/activity_advice.xml
+++ b/app/src/main/res/layout/activity_advice.xml
@@ -9,7 +9,7 @@
     android:paddingBottom="0dp"
     android:background="#FFEB3B"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_advice" tools:context=".AdviceActivity"
+    tools:context=".AdviceActivity"
     android:minWidth="1000dp">
 
 <ImageView
